fixed gaps in main page headers

--- a/index.css
+++ b/index.css
@@ -3,13 +3,6 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
-.WelcomePage {
-    width: 1440px;
-    height: 1024px;
-    position: relative;
-    background: white;
-}
-
 .TopNav,
 .BottomHalf,
 .LogoSphere,
@@ -26,7 +19,7 @@ body {
 }
 
 .TopNav {
-    width: 1440px;
+    width: 100%;
     height: 136px;
     left: 0;
     top: 0;
@@ -34,9 +27,8 @@ body {
 }
 
 .BottomHalf {
-    width: 1440px;
+    width: 100%;
     height: 447px;
-    left: -24px;
     top: 571px;
     background: #5BC0EB;
 }
